# yalbir

./: Cargo.toml  README.md  setup-steps.txt
.cargo/: config.toml
src/: main.rs  transmit.rs
src/beat/: counting.rs  mod.rs  tapping.rs
src/color/: mod.rs
src/color/palettes/: circling.rs  mod.rs
src/control/ir/: executor.rs  mod.rs
src/control/ir/remotes/: mod.rs  spaceship.rs
src/patterns/: background.rs  breathing.rs  caterpillar.rs  command.rs  mod.rs  partitioned.rs  shooting_star.rs  strobe.rs
src/util/: ble.rs  color.rs  commands.rs  mod.rs  random.rs  timer.rs
