[package]
name = "yalbir"
version = "0.1.0"
authors = ["Anton Kriese <anton.kriese@gmx.de>"]
edition = "2021"
license = "MIT"

[dependencies]
critical-section = "1.1.2"
embedded-io = { version = "0.6.1", default-features = false }
esp-backtrace = { version = "0.12.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.18.0", features = [ "esp32" ] }
esp-println = { version = "0.9.1", features = ["esp32", "log"] }
esp-wifi = { version = "0.6.0", features = ["esp32", "wifi-default", "wifi", "utils"] }
fugit = "0.3.7"
log = { version = "0.4.21" }
smoltcp =  { version = "0.11.0", default-features = false, features = ["log"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[profile.dev.package.esp-wifi]
opt-level = 3
