[package]
name = "yalbir"
version = "0.1.0"
authors = ["Anton Kriese <anton.kriese@gmx.de>"]
edition = "2021"
license = "MIT"

[dependencies]
bleps = { git = "https://github.com/bjoernQ/bleps.git", branch = "main", features = ["async", "macros"] }
critical-section = "1.1.2"
embedded-io = { version = "0.6.1", default-features = false }
embassy-executor = { version = "0.5.0" }
embassy-time = { version = "0.3.1", features = ["generic-queue"] }
embassy-futures = { version = "0.1", features = ["defmt"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
esp-backtrace = { version = "0.12.0", features = [
  "esp32",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.18.0", features = ["esp32", "async"] }
esp-hal-embassy = { version = "0.1.0", features = ["esp32", "time-timg0"] }
esp-println = { version = "0.9.1", features = ["esp32", "log"] }
esp-wifi = { version = "0.6.0", features = [
  "esp32",
  "ble",
  "async",
] }
fugit = "0.3.7"
log = { version = "0.4.21" }
esp-alloc = "0.4.0"
anyhow = { version = "1.0", default-features = false }
nom = { version = "7", default-features = false, features = ["alloc"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[profile.dev.package.esp-wifi]
opt-level = 3
